# champagneSADEZLAN

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
api/glass/: index.html
data_raw/: data_transformation.py
docs/: index.md  processed_data_documentation.md
docs/api/: expected_lambda.md  glass.md  radius_fun.md  simulate.md  weather.md
site/: objects.inv
site/api/expected_lambda/: index.html
site/api/processed_data_documentation/: index.html
site/api/radius_fun/: index.html
site/api/simulate/: index.html
site/api/weather/: index.html
src/champagneSADEZLAN/: __init__.py  expected_lambda.py  glass.py  radius_fun.py  simulate.py  weather.py
src/champagneSADEZLAN.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/champagneSADEZLAN/data/processed_data/: weather_processed.csv
