[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "champagneSADEZLAN"
version = "0.1.0"
description = "Simulation of champagne consumption for a weather-dependent event."
authors = [
  { name = "Axel Lo SChiavo", email = "axel.loschiavo@unil.ch" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "matplotlib"
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "sphinx", "mkdocs", "mkdocstrings[python]"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/Sadezlan/champagneSADEZLAN"

[tool.distutils.bdist_wheel]
universal = true
